--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,79 @@
 /* Landscape - телефоны */
 @media screen and (max-width: 480px) {
+    h2 {
+        font-size: 24px;
+    }
 
+    .container {
+        max-width: 768px;
+    }
+
+    .wrapper {
+        padding: 0 30px;
+    }
+
+    .header {
+        padding-top: 10px;
+    }
+
+    .header__content {
+        position: unset;
+        flex-direction: column;
+    }
+
+    .header__content img {
+        width: 28px;
+        height: 38px;
+    }
+
+    .header__content span {
+        display: none;
+    }
+
+    .header__menu {
+        display: block;
+        margin-right: 0;
+        text-align: center;
+        font-size: 10px;
+    }
+
+    .header__menu li {
+        width: 100%
+    }
+
+    .header__menu li + li {
+        margin-left: 0;
+    }
+
+
+    #toogle__btn {
+        display: block;
+    }
+
+    #shoppingCart__btn {
+        display: none;
+    }
+    .main__menu {
+        justify-content: center;
+    }
+
+    .main__menu-inner {
+        display: none;
+    }
+
+    #money__list {
+        display: none;
+    }
+
+    .bar__content-right input {
+        display: none;
+        width: 125px;
+    }
+    .search__bar-inner {
+        padding-top: 10px;
+        flex-direction: column;
+        justify-content: unset;
+    }
 }
 
 /* От ландшафтного экрана телефона до потретного планшета */
