--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ h2 {
   font-size: 28px;
   font-weight: 400;
   color: #ffffff;
+  cursor: pointer;
 }
 
 h3 {
@@ -30,6 +31,7 @@ h3 {
   font-weight: 400;
   font-style: italic;
   color: #a7a49c;
+  cursor: default;
 }
 
 .container {
@@ -74,6 +76,7 @@ h3 {
   font-weight: 400;
   line-height: 28px;
   color: #fff;
+  cursor: default;
 }
 
 .header__menu {
