--- a/sass/style.sass
+++ b/sass/style.sass
@@ -30,6 +30,7 @@ h2
     size: 28px
     weight: 400
   color: #ffffff
+  cursor: pointer
 
 h3
   font:
@@ -71,6 +72,7 @@ h3
       weight: 400
     line-height: 28px
     color: #fff
+    cursor: default
 
 .header__menu
   margin-right: 15px
@@ -96,7 +98,7 @@ h3
   text-align: center
   padding: 40px
   width: 100%
-  height: 290px
+  height: 100vh
   background-color: rgba(0, 0, 0, .8)
   margin: 0 auto
   font:
@@ -105,13 +107,14 @@ h3
     weight: 400
   & li
     padding: 2px 10px
+    margin-bottom: 10px
   & li:hover
     border-radius: 20px
     background-color: #f54922
     a
       color: #fff
   & a
-    color: #7d7253
+    color: #fff
 
 .header__content-right img
   padding: 9px 9px 11px 9px
@@ -163,46 +166,61 @@ h3
 .main__menu-inner
   display: flex
   align-items: center
-  & ul, li
-    display: inline-block
-  & ul
-    font:
-      family: "Terminal Dosis-Book"
-      size: 16px
-      weight: 400
-    line-height: 24px
-    letter-spacing: 0.48px
+  width: 100%
+  height: 66px
+
+#menu
+  display: flex
+  align-items: center
+  font:
+    family: "Terminal Dosis-Book"
+    size: 16px
+    weight: 400
+  height: 66px
   & li
+    display: flex
+    align-items: center
+    height: inherit
     padding: 2px 10px
   & li:hover
-    border-radius: 20px
-    background-color: #f54922
-    a
-      color: #fff
+    background-color: #fbf2d3
+    background-image: linear-gradient(to top, #fbf2d3 0%, #f0e4b8 99%, #f0e4b8 100%)
   & li+li
-    margin-left: 10px
+    margin-left: 5px
   & a
+    display: inline-block
     color: #7d7253
 
-//.main__menu-inner ul li
-//  position: relative
-//
-//
-//#sub__menu
-//  display: none
-//  position: absolute
-//  width: 186px
-//  top: 45px
-//  left: -10px
-//  padding-left: 10px
-//  background-color: #fbf2d3
-//  & li
-//    width: 100%
-//    margin-bottom: 10px
-//    text-align: left
-//  & li+li
-//    margin-left: 0px!important
-//    margin-bottom: 10px
+#menu li:nth-child(2)
+  position: relative
+  &:hover
+    #sub__menu
+      display: block
+
+
+#sub__menu
+  display: none
+  position: absolute
+  width: 150px
+  top: 65px
+  left: 0px
+  background-color: #fbf2d3
+  & li
+    padding: 4px 10px
+    width: 100%
+    margin-bottom: 10px
+    text-align: left
+    &:hover
+      background-color: #f54922
+      border-radius: 10px
+      background-image: none
+  & li+li
+    margin-left: 0px!important
+    margin-bottom: 10px
+  & a
+    width: 100%
+    &:hover
+      color: #fff
 
 .home__logo
   margin-right: 3px
